Prevent open shifts row hidden
close #21, close #18 , close #15

--- a/Punched Out/Buddy Punch_files/bundle.css
+++ b/Punched Out/Buddy Punch_files/bundle.css
@@ -71532,7 +71532,7 @@ body.m-content--skin-light2 {
 }
 
 #schedule_calendar .fc-view-container tr[data-resource-id="0"] {
-    height: 55px !important
+    height: auto !important
 }
 
 .fc-button {
